Add Cors configuration

--- a/src/Jevstafjev.Anecdotes.Notification/Jevstafjev.Anecdotes.Notification/appsettings.json
+++ b/src/Jevstafjev.Anecdotes.Notification/Jevstafjev.Anecdotes.Notification/appsettings.json
@@ -1,9 +1,18 @@
 {
+  "Cors": {
+    "Origins": "*"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AuthServer": {
+    "Url": "https://localhost:10001"
+  },
+  "ServiceUrls": {
+    "SubscriberApi": "https://localhost:8001"
   },
   "AllowedHosts": "*"
 }
